fix(material/chips): placeholder visible on focus
prior this commit the placeholder was only visible if the chips get focused, this commit makes sure that if we have any sort of data we show our input's placeholder

fixes #26883

--- a/src/material/chips/chip-set.scss
+++ b/src/material/chips/chip-set.scss
@@ -39,3 +39,13 @@ input.mat-mdc-chip-input {
     margin-right: 8px;
   }
 }
+
+// This ensures that if we have any sort of data in our chips, we apply
+// a class & set placeholder to be visible so it doesn't show only when
+// form field is focused.
+.mat-mdc-chip-list-placeholder {
+  // stylelint-disable-next-line material/no-prefixes
+  .mat-mdc-chip-input::placeholder {
+    opacity: 1;
+  }
+}
